--- a/indexstyles.css
+++ b/indexstyles.css
@@ -2,12 +2,49 @@ body {
   background-image: url("./magnolia.png");
   background-color: grey;
   background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
+  background-blend-mode: soft-light;
 }
 
 img {
   background: transparent;
-  display: block;
+  position: absolute;
   margin-left: 50px;
+}
+
+.centertext {
+    left: 0;
+    line-height: 200px;
+    margin-top: -100px;
+    position: absolute;
+    text-align: center;
+    top: 50%;
+    width: 100%;
+    color: white;
+    font-family: Georgia, Serif;
+}
+
+a {
+  font-size: 200px;
+  color: white;
+}
+
+a:link {
+  text-decoration: none;
+}
+
+a:visited {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+a:active {
+  text-decoration: underline;
 }
 
 .ml12 {
