--- a/indexstyles.css
+++ b/indexstyles.css
@@ -1,17 +1,29 @@
 body {
-  background-image: url("./magnolia.png");
+  background-image: url("./magnolia3.jpg");
   background-color: grey;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
-  background-blend-mode: soft-light;
+  /* background-blend-mode: soft-light; */
 }
 
-img {
+/* img {
   background: transparent;
   position: absolute;
-  margin-left: 50px;
+  margin-left: 500px;
+  margin-top: 100px;
+} */
+
+div {
+  margin-left: 500px;
+  margin-top: 150px;
+  height: 200px;
+}
+
+.logo img {
+  height: 100%;
+  width: auto;
 }
 
 .centertext {
