--- a/librarystyles.css
+++ b/librarystyles.css
@@ -1,6 +1,3 @@
-@import url(https://fonts.googleapis.com/css?family=Anonymous+Pro);
-
-/* Global */
 html{
   min-height: 100%;
   overflow: hidden;
@@ -8,7 +5,7 @@ html{
 
 body {
   font-family: 'Anonymous Pro', monospace;
-  font-size:30px;
+  font-size:20px;
   margin: 10px 50px;
   letter-spacing: 6px;
   font-weight: bold;
@@ -17,4 +14,14 @@ body {
   color: rgba(255,255,255,.75);
   font-family: 'Anonymous Pro', monospace;
   background-color: rgb(25,25,25);
+}
+
+.scrolling-wrapper {
+  overflow-x: scroll;
+  overflow-y: hidden;
+  white-space: normal;
+}
+.card {
+  display: inline-block;
+  width: 100%;
 }
