--- a/librarystyles.css
+++ b/librarystyles.css
@@ -1,27 +1,86 @@
-html{
+@import url(https://fonts.googleapis.com/css?family=Anonymous+Pro);
+
+/* Global */
+html {
   min-height: 100%;
-  overflow: hidden;
+  overflow: scroll;
 }
 
 body {
   font-family: 'Anonymous Pro', monospace;
-  font-size:20px;
+  font-size:30px;
   margin: 10px 50px;
   letter-spacing: 6px;
   font-weight: bold;
   height: calc(100vh - 8em);
-  padding: 1em;
+  padding: 0.5em;
   color: rgba(255,255,255,.75);
   font-family: 'Anonymous Pro', monospace;
   background-color: rgb(25,25,25);
 }
+.slide {
+  width: 90vw;
+  height: 100vh;
+}
+.wrapper {
+  display: flex;
+  flex-direction: row;
+  width: 400vw;
+  /* transform: rotate(90deg) translateY(-100vh);
+  transform-origin: top left; */
+}
 
-.scrolling-wrapper {
-  overflow-x: scroll;
-  overflow-y: hidden;
-  white-space: normal;
+/* .outer-wrapper {
+  width: 100vh;
+  height: 100vw;
+  transform: rotate(-90deg) translateX(-100vh);
+  transform-origin: top left;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  position: absolute;
+  /* scrollbar-width: none;
+  -ms-overflow-style: none;
+} */
+::-webkit-scrollbar {
+  display:none;
 }
-.card {
-  display: inline-block;
-  width: 100%;
+
+.one {
+  background: rgb(25,25,25);
 }
+.two {
+  padding-left: 100px;
+  background: rgb(25,25,25);
+}
+.three {
+  position: relative;
+  /* height: 400px; */
+  display: block;
+  background-image: url('library.png');
+  background-size: cover;
+  box-shadow: inset 0 0 200px black;
+}
+.four {
+  padding-left: 100px;
+  background: rgb(25,25,25);
+}
+
+.five {
+  padding-left: 100px;
+  background: rgb(25,25,25);
+}
+
+.six {
+  padding-left: 100px;
+  background: rgb(25,25,25);
+}
+.seven {
+  padding-left: 100px;
+  background: rgb(25,25,25);
+}
+
+
+/*
+#typedtext {
+  height: auto;
+} */
