--- a/laboratorystyles.css
+++ b/laboratorystyles.css
@@ -64,8 +64,8 @@ body {
   background: rgb(25,25,25);
 }
 
-
-/*
-#typedtext {
-  height: auto;
+/* #submit {
+  color: rgb(25,25,25);
 } */
+
+/* --------------- */
