--- a/styles/indexstyles.css
+++ b/styles/indexstyles.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("./magnolia3.jpg");
+  background-image: url("../assets/magnolia3.jpg");
   background-color: grey;
   background-repeat: no-repeat;
   background-attachment: fixed;
