--- a/styles/introstyles.css
+++ b/styles/introstyles.css
@@ -52,7 +52,7 @@ body {
   position: relative;
   /* height: 400px; */
   display: block;
-  background-image: url('/assets/kitchen.jpg');
+  background-image: url(../assets/kitchen.jpg);
   background-size: cover;
   box-shadow: inset 0 0 200px black;
 }
@@ -64,7 +64,7 @@ body {
   position: relative;
   /* height: 400px; */
   display: block;
-  background-image: url('/assets/moscato.jpg');
+  background-image: url(../assets/moscato.jpg);
   background-size: cover;
   box-shadow: inset 0 0 200px black;
 }
