--- a/styles/gardenstyles.css
+++ b/styles/gardenstyles.css
@@ -65,6 +65,11 @@ body {
   background: rgb(25,25,25);
 }
 
+.four {
+  padding-left: 100px;
+  background: rgb(25,25,25);
+}
+
 .five {
   padding-left: 100px;
   background: rgb(25,25,25);
